<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/imputLayout_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/email"
        android:textColorHint="@color/colorGreyOpText"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/colorPrimary"
        app:errorEnabled="true"
        app:errorTextColor="@color/colorError"
        app:hintTextColor="@color/colorDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_user_name"
            style="@style/EditTextRegularStyle"
            android:background="@android:color/transparent"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/imputLayout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password"
        android:textColorHint="@color/colorGreyOpText"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/colorPrimary"
        app:errorEnabled="true"
        app:errorTextColor="@color/colorError"
        app:hintTextColor="@color/colorGreyOpText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imputLayout_user_name"
        app:passwordToggleEnabled="true"
        app:passwordToggleTintMode="src_atop">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            style="@style/EditTextRegularStyle"
            android:background="@android:color/transparent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_longin"
        style="@style/RegularButtonStyle"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:text="@string/login"
        android:visibility="visible"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imputLayout_password" />



</androidx.constraintlayout.widget.ConstraintLayout>