<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/placeCardUser"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:layout_gravity="center"
    card_view:cardCornerRadius="4dp"
    android:animateLayoutChanges="true"
    card_view:cardElevation="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:barrierDirection="end"
            card_view:constraint_referenced_ids="placeImage"
            tools:layout_editor_absoluteX="448dp" />

        <ImageView
            android:id="@+id/placeImage"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_face_black_48"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/SubtitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/name"
            android:maxLines="2"
            android:textAlignment="viewStart"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/barrier3"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/location_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_name"
            android:layout_marginStart="8dp"
            android:src="@drawable/baseline_location_on_black_18"
            card_view:layout_constraintBottom_toBottomOf="@+id/tv_location"
            card_view:layout_constraintStart_toEndOf="@+id/barrier3"
            card_view:layout_constraintTop_toTopOf="@+id/tv_location"
            tools:visibility="visible" />


        <TextView
            android:id="@+id/tv_location"
            style="@style/RegularStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_name"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/location_point"
            android:maxLines="2"
            android:text="@string/location_field"
            android:textAlignment="textStart"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/location_point"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_name"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_email"
            style="@style/RegularStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_location"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:maxLines="2"
            android:text="@string/email"
            android:textAlignment="textStart"
            card_view:layout_constraintBottom_toTopOf="@+id/tv_distance"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/barrier3"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_location"
            card_view:layout_goneMarginBottom="16dp"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_distance"
            style="@style/RegularStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_email"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:maxLines="2"
            android:text="@string/distance"
            android:textAlignment="textStart"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/barrier3"
            tools:visibility="visible" />




    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.cardview.widget.CardView>